# skill-generador-datos

./: .gitignore  README.md  pyproject.toml
src/skill_generador_datos/: __init__.py  ai_engine.py  core.py  hybrid_engine.py  mappings.py  schemas.py
tests/: test_core.py
