[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skill_generador_datos"
version = "0.1.0"
description = "Skill de Generación de Datos Híbrida (IA + Faker) para esquemas de bases de datos."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Mariela", email = "maranyramos7@gmail.com"}
]
dependencies = [
    "faker>=24.11.0",
    "google-genai>=0.1.2",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2"
]

[project.urls]
"Homepage" = "https://github.com/mariela3009/skill-generador-datos"
